--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   logging: ^1.3.0
   flutter_dotenv: ^5.2.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +56,7 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
   assets:
-    - .env
+    - .env.emulator
     - .env.physical
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
