--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   logging: ^1.3.0
   flutter_dotenv: ^5.2.1
   fluttertoast: ^8.2.12
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
