--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fluttertoast: ^8.2.12
   provider: ^6.1.5
   storybook_flutter: ^0.14.1
+  widgetbook: ^3.13.1
+  widgetbook_annotation: ^3.4.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  widgetbook_generator: ^3.12.0
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
