--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,8 @@ dependencies:
   storybook_flutter: ^0.14.1
   widgetbook: ^3.13.1
   widgetbook_annotation: ^3.4.0
-
+  shared_preferences: ^2.5.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
