--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   widgetbook_annotation: ^3.4.0
   widgetbook: ^3.13.1
+  shared_preferences: ^2.5.3
   todo_app_ui_flutter:
     path: ../
 
